--- a/vm3/Dockerfile
+++ b/vm3/Dockerfile
@@ -2,7 +2,9 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+# Cette ligne force Python à afficher les logs instantanément
+ENV PYTHONUNBUFFERED=1
+
 COPY client.py server.py /app/
 
-# Par défaut, on lance le serveur, mais on pourra surcharger la commande
 CMD ["python", "server.py"]
