--- a/vm1/docker-compose.yml
+++ b/vm1/docker-compose.yml
@@ -1,19 +1,13 @@
-services:
-  # Client 1
-  client-1:
-    image: 192.168.200.17:5000/chat-app:v1
-    command: python client.py
-    stdin_open: true
-    tty: true
-    environment:
-      - SERVER_HOST=192.168.200.17
-      - SERVER_PORT=6000
+version: '3.8'
 
-  client-2:
-    image: 192.168.200.17:5000/chat-app:v1
-    command: python client.py
+services:
+  p2p-node-b:
+    image: 192.168.1.3:5000/chat-p2p:v1 # Récupère l'image depuis VM3
+    ports:
+      - "6000:6000" # Expose le port 6000 de VM1
     stdin_open: true
     tty: true
     environment:
-      - SERVER_HOST=192.168.200.17
-      - SERVER_PORT=6000
+      - MY_PORT=6000          # J'écoute sur 6000
+      - PEER_IP=192.168.1.3   # Je parle à la VM3
+      - PEER_PORT=6000        # Sur son port 6000
